name: Migrate
version: 0.1
build-type: Simple 
license: BSD3
maintainer: corentin.dupont@gmail.com
synopsis: 
description: 
category: game
Homepage: 
build-type: Custom
author: Corentin Dupont
 
executable Migrate
    build-depends: base, 
                   safecopy, 
                   cereal, 
                   missingH==1.3.*
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Migrate MigrateV0
    ghc-options: -W -threaded
 
