name: previous-version
version: 0.1
build-type: Simple
license: BSD3
maintainer: corentin.dupont@gmail.com
synopsis: 
description: 
category: 
Homepage: 
cabal-version: >= 1.2
build-type: Simple
author: Corentin Dupont
 
library
    build-depends: base, 
                   gitlib,
                   gitlib-cmdline,
                   bytestring,
                   shelly,
                   tagged,
                   text,
                   conduit,
                   transformers,
                   mtl,
                   directory,
                   haskell-src-exts,
                   parsec

    buildable: True
    hs-source-dirs: src
    exposed-modules: PreviousVersion
    ghc-options: -W -threaded
 
executable PVPreprocess
    build-depends: base,
                   gitlib,
                   gitlib-cmdline,
                   bytestring,
                   shelly,
                   tagged,
                   text,
                   conduit,
                   transformers,
                   mtl,
                   directory,
                   haskell-src-exts,
                   parsec
    buildable: True
    hs-source-dirs: src
    main-is: PrePro.hs
    other-modules: PrePro, PreviousVersion
    ghc-options: -W -threaded

